<resources>
	<string name="app_name">SuperMarket</string>
	<string name="catalog">Catalog</string>
	<string name="barcode">barcode</string>
	<string name="stock_roullet">stock roullet</string>
	<string name="shopping_cart">Shopping cart</string>
	<string name="milk_product">milk \nproducts</string>
	<string name="fruits">fruits</string>
	<string name="vegetables">vegetables</string>
	<string name="drinks">drinks</string>
	<string name="meat_products">meat \nproducts</string>
	<string name="product">product</string>
	<string name="title">Title</string>
	<string name="price">Price</string>
	<string name="quantity">Quantity</string>
	<string name="total">Total</string>
	<string name="get_qr_code">Get QR-code</string>
	<string name="qr_code">QR-code</string>
	<string name="generate_barcode">Generate</string>
	<string name="start">Start</string>
</resources>