<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".fragments.shoppingcart.ShoppingCart"
	android:id="@+id/frameLayout">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="625px"
		android:layout_height="150px"
		android:id="@+id/header_title"
		tools:ignore="MissingConstraints"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toTopOf="@+id/shopping_cart_table_scroll"
		app:layout_constraintHorizontal_bias="0.497" android:layout_marginTop="-50dp">

		<TextView
			android:id="@+id/header_text"
			android:textStyle="bold"
			android:layout_width="440px"
			android:layout_height="110px"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:autoSizeTextType="uniform"
			app:layout_constraintTop_toTopOf="parent"
			android:text="@string/shopping_cart"
			android:textAlignment="center"
			android:textSize="90px"
		/>

	</androidx.constraintlayout.widget.ConstraintLayout>
	<View
		android:layout_width="fill_parent"
		android:layout_height="1dp"
		android:background="@color/black"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/header_title"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toTopOf="@+id/shopping_cart_table_scroll"/>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="400dp"
		android:id="@+id/shopping_cart_table_scroll"
		android:scrollbars="none"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toTopOf="@+id/linearLayout"
		app:layout_constraintTop_toBottomOf="@+id/header_title"
		android:layout_weight="1">
		<TableLayout
			android:layout_width="match_parent"
			android:layout_height="400dp"
			android:id="@+id/shopping_cart_table"
			android:stretchColumns="*"
			app:layout_constraintHorizontal_bias="1.0">
			<TableRow android:layout_width="wrap_content"
					  android:gravity="center"
					  android:layout_height="wrap_content">
				<TextView
					android:layout_width="fill_parent"
					android:textSize="60px"
					android:layout_height="wrap_content"
					android:text="@string/title"
					android:textAlignment="center"
				/>
				<TextView
					android:layout_width="fill_parent"
					android:textSize="60px"
					android:layout_height="wrap_content"
					android:text="@string/price"
					android:textAlignment="center"
				/>
				<TextView
					android:layout_width="fill_parent"
					android:textSize="60px"
					android:layout_height="wrap_content"
					android:text="@string/quantity"
					android:textAlignment="center"
				/>
				<TextView
					android:layout_width="fill_parent"
					android:textSize="60px"
					android:layout_height="wrap_content"
					android:text="@string/total"
					android:textAlignment="center"
				/>
				<TextView
					android:layout_width="25dp"
					android:textSize="60px"
					android:layout_height="wrap_content"
					android:text="x"
					android:textAlignment="center"
				/>
			</TableRow>
		</TableLayout>
	</ScrollView>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="220px"
		android:id="@+id/linearLayout"
		android:gravity="center"
		app:layout_constraintTop_toBottomOf="@+id/shopping_cart_table_scroll"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="-30dp">

		<TextView
			android:id="@+id/total_sum"
			android:layout_width="wrap_content"
			android:textAlignment="center"
			android:textSize="16sp"
			android:layout_height="70px"
			android:textColor="@color/black"
		/>
		<Button
			android:id="@+id/getBarcode"
			android:layout_width="wrap_content"
			android:layout_height="150px"
			android:textSize="16sp"
			android:backgroundTint="@color/mg"
			android:text="@string/get_qr_code"
			android:textColor="@color/black"
		/>


	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>