<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/white"
	tools:context=".MainActivity">

	<FrameLayout
		android:id="@+id/child_fragment"
		android:layout_width="match_parent"
		android:layout_height="600dp"
		app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintBottom_toTopOf="@+id/toolbar">

	</FrameLayout>
	<androidx.appcompat.widget.Toolbar
		android:layout_width="match_parent"
		android:layout_height="64dp"
		android:theme="?attr/actionBarTheme"
		android:minHeight="?attr/actionBarSize"
		android:id="@+id/toolbar"
		android:layout_gravity="bottom"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/child_fragment" app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
		android:layout_marginBottom="15dp">
		<LinearLayout android:layout_width="match_parent"
					  android:layout_height="64dp"
					  android:orientation="horizontal"
					  android:gravity="center"
		>
			<ImageButton
				android:id="@+id/catalog_button"
				android:src="@mipmap/ic_catalog_foreground"
				android:layout_width="64dp"
				android:layout_height="64dp"
				android:background="@null"
				android:layout_gravity="center_horizontal"
				android:contentDescription="@string/catalog"
				android:onClick="onClick"
				android:layout_margin="10dp"
			/>
			<ImageButton
				android:id="@+id/barcode"
				android:src="@mipmap/ic_barcode_foreground"
				android:layout_width="68dp"
				android:layout_height="64dp"
				android:background="@null"
				android:layout_gravity="center_horizontal"
				android:contentDescription="@string/barcode"
				android:onClick="onClick"
				android:layout_margin="10dp"
			/>
			<ImageButton
				android:id="@+id/stock_roulette"
				android:src="@mipmap/ic_stock_roulette_foreground"
				android:layout_width="64dp"
				android:layout_height="64dp"
				android:background="@null"
				android:onClick="onClick"
				android:layout_gravity="center_horizontal"
				android:contentDescription="@string/stock_roullet"
				android:layout_margin="10dp"
			/>
			<ImageButton
				android:id="@+id/shopping_cart"
				android:src="@mipmap/ic_shopping_cart_foreground"
				android:layout_width="64dp"
				android:layout_height="64dp"
				android:onClick="onClick"
				android:background="@null"
				android:layout_gravity="center_horizontal"
				android:contentDescription="@string/shopping_cart"
				android:layout_margin="10dp"
			/>
		</LinearLayout>
	</androidx.appcompat.widget.Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>